tests/errors/sem_assign8.java
public class sem_assign8 {
public static void main(String[] args){
String value ; value = 26 ;
}
}